@@ -8,6 +8,8 @@ PHP                                                                        NEWS
   . ext/db (Jani, Derick)
   . ext/mcal (Jani, Derick)
   . ext/qtdom (Jani, Derick)
+- Added 'c' modifier to date() which returns the date in the ISO 8601 format.
+  (Derick, Manuzhai)
 - Added MacRoman encoding support to htmlentities(). (Derick, Marcus Bointon)
 - Added possibility to call PHP functions as XSLT-functions. (Christian)
 - Added possibility to prevent PHP from registering variables when input filter
